Bug 161417 - Endnotes at section end: DOC & RTF support
Summary: Endnotes at section end: DOC & RTF support
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-04 11:40 UTC by Miklos Vajna
Modified: 2024-06-05 12:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (10.36 KB, application/vnd.oasis.opendocument.text)
2024-06-04 11:40 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-06-04 11:40:34 UTC
Created attachment 194545 [details]
Minimal reproducer

The ODT/DOCX part was solved with bug 160984, the DOC export and the RTF part is still missing.

Steps to reproduce:

1) Open the ODT in Writer, notice that the endnote is at the end of the section, not at the end of the document.

2) Save as DOC.

3) Open the result in Word

Expected result: endnote at the end of the section.

Actual result: endnote at the end of the document.
Comment 1 Commit Notification 2024-06-04 12:47:06 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/24ab535087991f1ce8dee9a561476bc0a987bac5

tdf#161417 DOC export: handle endnotes at section ends

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-06-05 08:39:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad8fa1b5912a04f4cc016965175315e4784fa229

tdf#161417 RTF import: handle endnotes at section ends

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-05 12:49:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/937bdd08ee8ff9ce90db06fd463719ba8e9da996

tdf#161417 RTF export: handle endnotes at section ends

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.