tdf#161417 DOC export: handle endnotes at section ends

Similar to commit 566c7017a84e3d573de85a6d986b81d3f59de0fa (tdf#160984
sw continuous endnotes: DOCX: export of <w:endnotePr> pos == sectEnd,
2024-05-29), but this is for DOC, not DOCX.

Change-Id: I4301d97115ba48f7ed1dacfdd5b29336bdaf9e63
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168401
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>